# data-wrangling-and-validation

./: LICENSE  Lesson 1 - Introduction to Jupyter Notebook and programming in Python.ipynb  Lesson 1-1 - Structuring and wrangling messy data using a spreadsheet editor.ipynb  Lesson 1-2-1 - Introduction to Jupyter Notebook and programming in Python.ipynb  Lesson 1-2-2 Programmatic data wrangling with Python and Pandas.ipynb  Lesson 2 - Programmatic data wrangling with Python and Pandas.ipynb  Lesson 2-1 - Validating restructured data against a schema using a spreadsheet.ipynb  Lesson 2-2 - Restructuring and validating data against a schema using Python and whyqd.ipynb  Lesson 3 - Anonymising personal synthetic data prior to publication.ipynb  Lesson 3 - Restructuring and validating data against a schema using Python and whyqd.ipynb  Lesson 4 - Anonymising personal synthetic data prior to publication.ipynb  Lesson 5 - Investigate and transform messy data into appropriate charts for presentation.ipynb  Leçon 1 - Introduction à Jupyter Notebook et à la programmation en Python.ipynb  Leçon 1-1 - Structurer et démêler des données confuses à l'aide d'un tableur.ipynb  Leçon 1-1 - Structurer et organiser des données désordonnées à l'aide d'un tableur.ipynb  Leçon 1-2-1 - Introduction à Jupyter Notebook et à la programmation en Python.ipynb  Leçon 1-2-2 La préparation de données par programmation avec Python et Pandas.ipynb  Leçon 1-2-2 Les querelles de données programmatiques avec Python et Pandas.ipynb  Module 2 - Lesson 2 - Programmatic data wrangling with Python and Pandas.ipynb  (+20 more)
(+34 files in other folders)
