[tool.poetry]
name = "data-wrangling-and-validation"
version = "0.1.0"
description = "Lesson guide and textbook for Data Wrangling and Validation for Open Data"
authors = ["Gavin Chait <gchait@whythawk.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.4.5"
whyqd = "^0.6.2"
matplotlib = "^3.5.3"
seaborn = "^0.11.2"
geopandas = "^0.11.1"
contextily = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
